--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <script>
     async function main() {
         try {
-            await liff.init({ liffId: "2008944819-hKnqP5yy" }); // 👈 ใส่ LIFF ID ของเปรมตรงนี้ค่ะ
+            await liff.init({ liffId: "2009026941-FsGWN6uS" }); // 👈 ใส่ LIFF ID ของเปรมตรงนี้ค่ะ
             if (!liff.isLoggedIn()) {
                 liff.login();
                 return;
